--- a/newsproject/templates/articles.html
+++ b/newsproject/templates/articles.html
@@ -15,7 +15,7 @@
                         data-bs-target="#offcanvasMenu" aria-controls="offcanvasMenu">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasMenu"
+                <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcanvasMenu"
                      aria-labelledby="offcanvasMenuLabel1">
                     <div class="offcanvas-header">
                         <h5 class="offcanvas-title" id="offcanvasMenuLabel1">Навигация</h5>
@@ -23,7 +23,7 @@
                                 aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
-                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-2">
                             <li class="nav-item">
                                 <a class="nav-link active text-light" aria-current="page" href="/">Главная</a>
                             </li>
